--- a/imovel/index.html
+++ b/imovel/index.html
@@ -1405,7 +1405,7 @@ var url = document.location.href;
            style="max-width: 100%; height: auto; border-radius: 4px;">
       <p style="margin: 10px 0 0; font-weight: 600; font-size: 16px; color: #F5F5F5;">Muffato</p>
       <p style="margin: 5px 0; font-size: 14px; color: #D0D0D0;">
-        3 min 700 m 1 min
+1 min — 700 m 
       </p>
     </div>
     <!-- Card 4 -->
@@ -1414,7 +1414,8 @@ var url = document.location.href;
            alt="Torre Sanepar" 
            style="max-width: 100%; height: auto; border-radius: 4px;">
       <p style="margin: 10px 0 0; font-weight: 600; font-size: 16px; color: #F5F5F5;">Torre Sanepar</p>
-      <p style="margin: 5px 0; font-size: 14px; color: #D0D0D0;">25 min (6,8 km)</p>
+      <p style="margin: 5px 0; font-size: 14px; color: #D0D0D0;">
+	  19 min — 6,8 km</p>
     </div>
   </div>
 </div>
