--- a/index.html
+++ b/index.html
@@ -895,7 +895,18 @@
         <div class="padding-global">
           <div class="w-layout-blockcontainer container-medium is-padding-top-small w-container">
             <div class="w-layout-grid _2-col-grid">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.360478661689!2d-49.2332606!3d-25.426209200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce5ba9c27c7d5%3A0xc558d56a59a9750d!2sR.%20Monte%20Castelo%2C%20821%20-%20Tarum%C3%A3%2C%20Curitiba%20-%20PR%2C%2082530-200!5e0!3m2!1spt-BR!2sbr!4v1744351619114!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.360478661689!2d-49.2332606!3d-25.426209200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce5ba9c27c7d5%3A0xc558d56a59a9750d!2sR.%20Monte%20Castelo%2C%20821%20-%20Tarum%C3%A3%2C%20Curitiba%20-%20PR%2C%2082530-200!5e0!3m2!1spt-BR!2sbr!4v1744351619114!5m2!1spt-BR!2sbr" 
+    width="100%" 
+    height="100%" 
+    style="border:0; position: absolute; top: 0; left: 0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+
               <div id="w-node-_60a5e6be-f5be-8c32-57b7-8d60f072c77e-9f782c96" class="sc_content-wrap">
                 <div class="header is-vertical-header">
                   <div id="w-node-_88d05608-60ad-d8ef-1fa0-2caff01eb5bd-9f782c96" class="overline_wrap">
