--- a/index.html
+++ b/index.html
@@ -613,9 +613,9 @@
       </section>
       
       <!-- PLANTAS SECTION -->
-      <section id="plantas" class="sc-plantas-02">
+      <section id="plantas" >
         <div class="padding-global">
-          <div class="w-layout-blockcontainer container-medium is-padding-top-medium w-container">
+          <div class="w-layout-block container container-medium is-padding-top-medium w-container">
             <div class="sc_content-wrap">
               <div class="w-layout-grid header is-light">
                 <div class="overline_wrap">
