--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
       <!-- Seção Materiais de Alta Qualidade -->
       <section id="materiais" style="padding: 40px 0; background-color: #fff;">
         <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
-          <h2 style="font-size: 2em; margin-bottom: 10px;">CONFORTO, PATRICIDADE E ECONOMIA</h2>
+          <h2 style="font-size: 2em; margin-bottom: 10px;">CONFORTO, PRATICIDADE E ECONOMIA</h2>
           <hr style="border: 0; height: 2px; background: #000; width: 50px; margin: 0 auto 40px;">
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
             <a href="images/material/3.png" style="display: block; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" onclick="openModal(event, 'images/material/3.png')">
@@ -935,7 +935,7 @@
 			
 			<br><br>
 			<div style="max-width: 1200px; margin: 0 auto; text-align: center;">
-          <h2 style="font-size: 2em; margin-bottom: 10px;">CONFORTO, PATRICIDADE E ECONOMIA</h2><br>
+          <h2 style="font-size: 2em; margin-bottom: 10px;">CONFORTO, PRATICIDADE E ECONOMIA</h2><br>
           <hr style="border: 0; height: 2px; background: #000; width: 50px; margin: 0 auto 40px;">
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
             <a href="images/material/3.png" style="display: block; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" onclick="openModal(event, 'images/material/3.png')">
