--- a/index.html
+++ b/index.html
@@ -1013,9 +1013,9 @@
           <div class="proximidades-grid">
             <!-- Linha 1 -->
 			            <div class="proximidade-card">
-              <img src="locais/madero-jardim-social.jpg" alt="Academia Carpediem">
+              <img src="locais/madero-jardim-social.jpg" alt="Madero Jardim Social">
               <div class="proximidade-info">
-                <h4>Maddero Jardim Social</h4>
+                <h4>Madero Jardim Social</h4>
                 <p>3 min — 1,2 km</p>
               </div>
             </div>
